deploy docker host ok
